WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63045
[GTK]
r89314
caused several shadow tests to start failing
https://bugs.webkit.org/show_bug.cgi?id=63045
Summary
[GTK] r89314 caused several shadow tests to start failing
Martin Robinson
Reported
2011-06-20 23:02:41 PDT
The following tests are now failing: canvas/philip/tests/2d.shadow.alpha.3.html canvas/philip/tests/2d.shadow.alpha.4.html canvas/philip/tests/2d.shadow.alpha.5.html canvas/philip/tests/2d.shadow.gradient.alpha.html canvas/philip/tests/2d.shadow.gradient.transparent.1.html canvas/philip/tests/2d.shadow.pattern.alpha.html canvas/philip/tests/2d.shadow.pattern.transparent.1.html fast/canvas/canvas-fillPath-alpha-shadow.html fast/canvas/canvas-fillPath-gradient-shadow.html fast/canvas/canvas-fillPath-pattern-shadow.html fast/canvas/canvas-strokePath-alpha-shadow.html fast/canvas/canvas-strokePath-gradient-shadow.html fast/canvas/canvas-strokeRect-alpha-shadow.html fast/canvas/canvas-strokeRect-gradient-shadow.html I will try to fix this bug ASAP. For now I will skip the tests.
Attachments
Patch
(4.29 KB, patch)
2011-06-21 11:45 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2011-06-21 11:45:43 PDT
Created
attachment 98027
[details]
Patch
Dirk Schulze
Comment 2
2011-06-21 13:04:38 PDT
Comment on
attachment 98027
[details]
Patch r=me
WebKit Review Bot
Comment 3
2011-06-21 13:30:16 PDT
Comment on
attachment 98027
[details]
Patch Clearing flags on attachment: 98027 Committed
r89374
: <
http://trac.webkit.org/changeset/89374
>
WebKit Review Bot
Comment 4
2011-06-21 13:30:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug