2011-06-21  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Dirk Schulze.

        [GTK] r89314 caused several shadow tests to start failing
        https://bugs.webkit.org/show_bug.cgi?id=63045

        * platform/gtk/Skipped: Unskip tests that are now passing.
2011-06-21  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Dirk Schulze.

        [GTK] r89314 caused several shadow tests to start failing
        https://bugs.webkit.org/show_bug.cgi?id=63045

        Use prepareForFilling and prepareForStroking when rendering the shadowed
        image of a path. This ensures that the shadowed image has the proper alpha.

        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        (WebCore::drawPathShadow): Properly prepare the shadow image.

Canonical link: https://commits.webkit.org/78687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89374 268f45cc-cd09-0410-ab3c-d52691b4dbfc